# gleemail

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Example Message.json  Message.json  MorseCodeCharPairs.json  Prefs.json  README.md  SECURITY.md  TestMemoryCopy.cpp  binarysearchtree.h  bstree.cpp  bstree.h  glEEmail flow.drawio  glEEmail.cpp  gleemail.ino  global.h  inputdevice.h  inputmethod.cpp  inputmethod.h  main.cpp  morsecode.cpp  morsecode.h  temp.xxx  tilttype.cpp  tilttype.h  wiring diagram.drawio
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  compile and test.yml  compile.yml  test.yml
BSTreeTest/: BSTreeTest.ino  ascii tree.cpp  binarysearchtree.h  bstree.h  morsecodetree.h
DynamicArrayTest/: DynamicArrayTest.ino  dynamicarray.h
HashTableTest/: hashtable.h
MorseCodeTimingCalibrator/: MorseCodeTimingCalibrator.cpp
data/: MorseCodeAbbreviations.json  MorseCodeCharPairs.json  MorseCodeQCodes.json
documentation/: Example Connections.json  Example History.json  Example Message.json  Example Prefs.json  Example glEEpals.json  glEEmail flow.drawio  wiring diagram.drawio
libraries/: ArduinoJson-v6.17.3.hpp
resources/: glEEmail social.afdesign
src/: display.cpp  inputmethod.cpp  internetaccess.cpp  morsecode.cpp  networking.cpp  preferences.cpp  storage.cpp  tilttype.cpp  webaccess.cpp  websiteaccess.cpp  x-storage.cpp
src/include/: _old_binarysearchtree.h  _old_morsecodetree.h  binarysearchtree.h  corecomponent.h  debuglog.h  display.h  filepath.h  gleepal.h  global.h  idempotencytoken.h  inputmethod.h  internetaccess.h  keyvaluepair.h  kvpair.h  message.h  messageerror.h  morsecode.h  morsecodetree.h  networking.h  preferences.h  queue.h  security.h  startupcodehandler.h  storage.h  tilttype.h  webaccess.h  websiteaccess.h
src/include/LiteChaCha/: authenticatedencrypt.h  keyinfrastructure.h
src/include/lib/LiteChaCha/: chacha.h
src/include/lib/LiteChaCha/tests/TimeTests/: TimeTests.ino
src/include/lib/LiteChaCha/tests/TimeTests/src/include/: chacha.h
src/include/lib/litechacha/: authenticatedencrypt.h
tests/: CMakeLists.txt  NetworkMessage.json  ut_queue.cpp
tests/BSTreeTest/: BSTreeTest.ino  binarysearchtree.h  morsecodetree.h
tests/DeleteTest/: DeleteTest.ino  queue.h
tests/DisplayScrollTest/: DisplayScrollTest.ino
tests/DisplayTimingTest/: DisplayTimingTest.ino
tests/EncryptionTiming/: EncryptionTiming.ino
tests/HTTPS-Download-UDP-Parse-Test/: HTTPS-Download-UDP-Parse-Test.ino
tests/JSONTest/: JSONTest.ino
tests/MorseCodeTimingCalibrator/: MorseCodeTimingCalibrator.cpp
tests/NetworkDownloadTest/: NetworkDownloadTest.ino
tests/NetworkSendAndReceive/: NetworkSendAndReceive.ino
tests/NetworkSendAndReceive/example/: WIFININA UDP SEND RECEIVE.cpp
tests/QueueTest/: QueueTest.ino  linkedlist.h  queue.h
tests/ReadPrefs/: ReadPrefs.ino
tests/UDPTest/: UDPTest.ino
tests/_bstree/: CMakeLists.txt  ut_bstree.cpp
tests/_debuglog/: CMakeLists.txt  ut_debuglog.cpp
tests/_kvp/: CMakeLists.txt  ut_kvp.cpp
tests/_queue/: CMakeLists.txt  ut_queue.cpp
tests/queue/: CMakeLists.txt  ut_queue.cpp
